couchbase/k8s/sidecar.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: sidecar
  labels:
    app: sidecar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidecar
  template:
    metadata:
      labels:
        app: sidecar
    spec:
      containers:
      - name: sidecar
        image: asarkar/sidecar
        imagePullPolicy: Never
