couchbase/k8s/nodeport.yaml
kind: Service
apiVersion: v1
metadata:
  name: couchbase-ui
  labels:
    app: couchbase
spec:
  type: NodePort
  ports:
    - name: admin
      protocol: TCP
      port: 8091
      targetPort: 8091
      nodePort: 31000
  selector:
    app: couchbase-node
