couchbase/k8s/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: couchbase-ui
 labels:
   app: couchbase
spec:
  backend:
    serviceName: couchbase-ui
    servicePort: admin
  # rules:
  # - host: couchbase.local
  #   http:
  #     paths:
  #     - path: /
  #       backend:
  #         serviceName: couchbase-ui
  #         servicePort: admin
